# OpenSees

./: CMakeLists.txt  installation_script.sh  test.py  test.tcl
EXAMPLES/ExamplePython/: safarrancho.py
SRC/: classTags.h
SRC/element/: CMakeLists.txt  Makefile  TclElementCommands.cpp
SRC/element/orihinge/: CMakeLists.txt  Makefile  OriHinge.cpp  OriHinge.h
SRC/interpreter/: OpenSeesElementCommands.cpp
SRC/runtime/commands/modeling/: element.hpp
